Big clean up of the tests